--- a/TEMA1_LFC/TEMA1_LFC.vcxproj
+++ b/TEMA1_LFC/TEMA1_LFC.vcxproj
@@ -129,8 +129,12 @@
     <ClCompile Include="RegexUtils.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Colors.h" />
     <ClInclude Include="DeterministicFiniteAutomaton.h" />
     <ClInclude Include="RegexUtils.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="input.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
