--- a/TEMA1_LFC/TEMA1_LFC.vcxproj.filters
+++ b/TEMA1_LFC/TEMA1_LFC.vcxproj.filters
@@ -32,5 +32,13 @@
     <ClInclude Include="RegexUtils.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Colors.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="input.txt">
+      <Filter>Source Files</Filter>
+    </Text>
   </ItemGroup>
 </Project>
